# countlines

./: .gitignore  README.md  pyproject.toml
src/codelines/: __init__.py  cli.py  config.py  counter.py  reporters.py  scanner.py
src/countlines/: __init__.py  cli.py  config.py  counter.py  ignore.py  scanner.py
tests/: test_codelines.py  test_countlines.py
